<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <!-- ================== TOP DESIGN ================== -->
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/topdesign1"
            android:contentDescription="@string/design_desc"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/topcat"
            android:contentDescription="@string/design_desc"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            android:src="@drawable/topdesign2"
            android:contentDescription="@string/design_desc"/>

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/back_button"
            android:contentDescription="@string/design_desc"/>
    </RelativeLayout>

    <!-- ================== BOTTOM DESIGN ================== -->
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:scaleType="fitXY"
            android:src="@drawable/botdesign1"
            android:contentDescription="@string/design_desc"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="22dp"
            android:scaleType="fitXY"
            android:src="@drawable/botdesign2"
            android:contentDescription="@string/design_desc"/>
    </RelativeLayout>

    <!-- ================== MAIN CONTENT (CENTER) ================== -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeBack"
            android:fontFamily="@font/kumar_one"
            android:textSize="30sp"
            android:textColor="@color/smth_orange"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logintxt"
            android:fontFamily="@font/poppins_bold"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

        <!-- Username -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_container"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:helperText=""
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_input"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:background="@drawable/user_input_roundedcorner"
                android:hint="   Username"
                android:fontFamily="@font/alata"
                android:textSize="18sp"
                android:lines="1"
                android:maxLength="20"
                android:inputType="text"
                android:textColorHint="@color/black"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

        <!-- Password with built-in toggle icon -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_container"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:helperText=""
            app:helperTextTextColor="@color/red"

            app:endIconMode="password_toggle"
            app:endIconDrawable="@drawable/show_password"
            app:endIconTint="@null"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/user_input_roundedcorner"
                android:fontFamily="@font/alata"
                android:hint="   Password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="16"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Remember Me + Forgot Password -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                android:textSize="15sp"
                android:fontFamily="@font/alata"/>

            <Space
                android:layout_width="45dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/forgotBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:fontFamily="@font/alata"
                android:textSize="15sp"
                android:textColor="@color/smth_orange"/>
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp"/>

        <!-- Login Button -->
        <ImageView
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login"
            android:contentDescription="@string/button_desc"/>

        <!-- Sign Up Suggestion -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_suggestion"
                android:textSize="15sp"
                android:fontFamily="@font/alata"
                android:textColor="@color/black"/>

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/signup_suggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:textSize="15sp"
                android:fontFamily="@font/alata"
                android:textColor="@color/smth_orange"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
